# TeamsLeech-Bot

./: .coverage  .env  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  claude-analysis-output.md  gemini_deep_analysis.md  job-logs.txt  pyproject.toml  requirements.txt  subjects_config.json  tasks.md  test_run.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bot-runner.yml  ci.yml  release.yml  workflow.yml
.serena/memories/: conventions.md  core.md  suggested_commands.md  task_completion.md  tech_stack.md
docs/: PHASE_A_SETUP.md  PHASE_B_DASHBOARD.md  PHASE_B_PATCH1_WEBAUTHN.md  PHASE_B_PATCH2_WORKFLOW_FIX.md  PHASE_C_DEPLOY_AND_D_BIOMETRIC.md  PRD.md  README.md  TeamsLeech_Guide.md  index.html  test2.html
scripts/: generate_session.py  get_teams_token.py  redesign_minimal.py  setup_gist.py
src/: bot.py  constants.py  fetcher.py  main.py  state_manager.py  token_manager.py  uploader.py
src/core/: config.py  constants.py
src/models/: domain.py
src/services/: auth.py  discovery.py  graph.py  scanner.py  transfer.py
src/teamsleech/: main.py
src/teamsleech/core/: config.py  retry.py
src/teamsleech/models/: domain.py
src/teamsleech/services/: auth.py  discovery.py  github_actions.py  github_secrets.py  graph.py  scanner.py  state.py  transfer.py
src/teamsleech/tg_bot/: filters.py  keyboards.py  views.py
src/teamsleech/tg_bot/handlers/: __init__.py  actions_ui.py  commands.py  scanner_ui.py  search_inputs.py  upload_ui.py
src/tg_bot/: filters.py  keyboards.py  views.py
src/tg_bot/handlers/: __init__.py  commands.py  scanner_ui.py  search_inputs.py  upload_ui.py
tests/: conftest.py  test_bot.py  test_e2e.py  test_fetcher.py  test_main.py  test_token_manager.py  test_uploader.py
tests/unit/: test_actions_ui.py  test_auth.py  test_commands.py  test_domain.py  test_github_actions.py  test_github_secrets.py  test_graph.py  test_keyboards.py  test_scanner.py  test_scanner_ui.py  test_state.py  test_transfer.py  test_upload_ui.py  test_views.py
