[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "teamsleech"
version = "2.0.0"
description = "A high-performance, asynchronous Telegram Bot for fetching Microsoft Teams academic recordings."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Ahmed", email = "ahmed@example.com" }
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "Pyrogram>=2.0.0",
    "TgCrypto>=1.2.0",
    "PyNaCl>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "respx>=0.21.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "python-semantic-release>=9.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/teamsleech"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.semantic_release]
version_variable = ["pyproject.toml:version"]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_pypi = false
upload_to_release = true
commit_message = "chore(release): {version} [skip ci]"
changelog_folder = "."
changelog_file = "CHANGELOG.md"
